--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,7 +3,7 @@ djangorestframework==3.14.0
 django-cors-headers==4.3.1
 django-filter==23.5
 reportlab==4.0.7
-Pillow==10.1.0
+Pillow>=10.2.0
 gunicorn==21.2.0
 whitenoise==6.6.0
 dj-database-url==2.1.0
