--- a/vercel.json
+++ b/vercel.json
@@ -7,15 +7,35 @@
       "config": {
         "distDir": "build"
       }
+    },
+    {
+      "src": "backend/gestao/wsgi.py",
+      "use": "@vercel/python"
     }
   ],
   "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/backend/gestao/wsgi.py"
+    },
+    {
+      "src": "/admin/(.*)",
+      "dest": "/backend/gestao/wsgi.py"
+    },
     {
       "src": "/(.*)",
       "dest": "/frontend/$1"
     }
   ],
   "rewrites": [
+    {
+      "source": "/api/(.*)",
+      "destination": "/backend/gestao/wsgi.py"
+    },
+    {
+      "source": "/admin/(.*)",
+      "destination": "/backend/gestao/wsgi.py"
+    },
     {
       "source": "/(.*)",
       "destination": "/index.html"
