--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gestao-roupas-frontend",
+  "name": "smartmanager-frontend",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
